[package]
name = "sessile-aws-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = { version = "0.5.1" }
base64 = "0.13.0"
futures-lite = "1.12.0"
log = "0.4.14"
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.74"
tokio = { version = "1.15.0", features = ["rt", "net", "rt-multi-thread"], package = "tokio" }
trillium = "0.2.2"
trillium-http = "0.2.7"

[dev-dependencies]
env_logger = "0.9.0"
